# botberi-backend

./: .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  llms.txt  pyproject.toml
docs/architecture/: agents.md  event_bus.md  overview.md
docs/operations/: environments.md  testing.md
docs/services/: admin_backend.md  event_broker.md  shared_psql_models.md  user_backend.md
environments/dev/: admin_backend.env.example  dev.env.example  event_broker.env.example  rabbitmq.env.example  shared_psql.env.example  user_backend.env.example  user_psql.env.example  user_redis.env.example
environments/prod/: admin_backend.env.example  event_broker.env.example  prod.env.example  rabbitmq.env.example  shared_psql.env.example  user_backend.env.example  user_redis.env.example
infra/nginx/: default.conf
services/admin_backend/: Dockerfile
services/admin_backend/alembic/: env.py
services/admin_backend/app/: main.py
services/admin_backend/requirements/: base.txt
services/admin_backend/tests/: __init__.py  conftest.py  test_agents.py  test_health.py
services/event_broker/: Dockerfile  alembic.ini
services/event_broker/alembic/: script.py.mako
services/event_broker/app/: __init__.py  main.py
services/event_broker/requirements/: base.txt  dev.txt
services/event_broker/tests/: __init__.py
services/user_backend/: Dockerfile  alembic.ini
services/user_backend/alembic/: env.py
services/user_backend/app/: __init__.py  main.py
services/user_backend/requirements/: base.txt  dev.txt
services/user_backend/tests/: __init__.py  (+5 more)
(+61 files in other folders)
